Added ConfRuleTranslator